# monody

./: .gitignore  LICENSE  README.md  build.sh  packages.x86_64  profiledef.sh
.github/workflows/: build-iso.yml  build-repo.yml  deploy-website.yml
airootfs/etc/: lsb-release  motd  pacman.conf  resolv.conf  shadow
airootfs/etc/dconf/db/monody.d/: 00-plank
airootfs/etc/dconf/profile/: user
airootfs/etc/gtk-3.0/: settings.ini
airootfs/etc/gtk-4.0/: settings.ini
airootfs/etc/lightdm/: lightdm-gtk-greeter.conf
airootfs/etc/lightdm/lightdm.conf.d/: autologin.conf
airootfs/etc/profile.d/: monody.sh
airootfs/etc/runit/runsvdir/default/: NetworkManager  agetty-autologin-tty1  elogind
airootfs/etc/runit/sv/agetty-autologin-tty1/: run
airootfs/etc/skel/.config/autostart/: monody-installer.desktop  pipewire-pulse.desktop  wireplumber.desktop
airootfs/etc/skel/.config/gtk-3.0/: settings.ini
airootfs/etc/skel/.config/xfce4/panel/: whiskermenu-1.rc
airootfs/etc/skel/.config/xfce4/xfconf/xfce-perchannel-xml/: xfce4-keyboard-shortcuts.xml  xfce4-panel.xml  xfwm4.xml
airootfs/etc/skel/.mozilla/firefox/: profiles.ini
airootfs/etc/skel/.mozilla/firefox/monody.default/chrome/: userChrome.css
airootfs/etc/xdg/: mimeapps.list
airootfs/root/: customize_airootfs.sh
airootfs/usr/local/src/: monody-users.vala
airootfs/usr/share/applications/: monody-install.desktop
efiboot/loader/entries/: 01-archiso-linux.conf  02-archiso-speech-linux.conf
grub/: grub.cfg  loopback.cfg
src/: xfconf.vapi
src/monody/: PKGBUILD
src/monody-backgrounds/: PKGBUILD
src/monody-desktop-config/: PKGBUILD  monody-desktop-config.install
src/monody-desktop-config/etc/skel/.config/autostart/: pipewire.desktop  plank.desktop  xcape.desktop
src/monody-desktop-config/etc/skel/.config/xfce4/xfconf/xfce-perchannel-xml/: monody.xml  xfce4-desktop.xml  xfce4-screensaver.xml  xfce4-terminal.xml  (+3 more)
src/monody-distro-config/: PKGBUILD  monody-distro-config.install
src/monody-distro-config/etc/: issue  os-release
src/monody-distro-config/etc/skel/.config/: topgrade.toml
src/monody-file-search-provider/: PKGBUILD  meson.build  monody-file-search-provider.desktop  monody-file-search-provider.ini  monody-file-search-provider.vala  monody-file-search-settings.desktop  monody-file-search-settings.vala  org.monody.FileSearch.service
src/monody-firefox-config/: PKGBUILD
src/monody-firefox-config/etc/skel/.mozilla/firefox/monody.default/: user.js
src/monody-hotcorners/: PKGBUILD  meson.build  monody-hotcorner-service.vala  monody-hotcorner-settings.desktop  monody-hotcorner-settings.vala  monody-hotcorners.desktop
src/monody-icons/: PKGBUILD  monody-icons.install
src/monody-icons/usr/share/icons/default/: index.theme
src/monody-installer/: PKGBUILD  config.vala  disk.vala  engine.vala  install_type.vala  keymap.vala  meson.build  monody-installer.desktop  monody-installer.vala  mountpoint.vala  org.monody.installer.policy  progress.vala  summary.vala  timezone.vala  timezonemap.vapi  user.vala  utils.vala  welcome.vala
src/monody-plank-theme/: PKGBUILD
src/monody-tools/: PKGBUILD  meson.build  monody-updater.desktop  monody-updater.vala  monody-users.desktop  monody-users.vala  monody-welcome.desktop  monody-welcome.vala
src/monody-users/: PKGBUILD  meson.build  monody-users.desktop
syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
website/: index.html  index.md  site.conf  styles.css  template.html
website/blog/: index.md
(+1 files in other folders)
